client/assets/styles/scss/popover/popover-views.scss
.popover-views {
  flex: 1 1 auto;
  height: 100%;
  overflow: hidden;
  position: relative;
  transition: height .15s, min-height .15s;
  width: 100%;

  .popover-content {
    max-height: none;
    padding: 0;
  }

  .fade {
    opacity: 0;
    transition: opacity .15s ease-in;

    &.in {
      opacity: 1;
    }
  }

  // list all elements that transition
  // popover-header and its contents are listed separately
  // because we do not always transition the entire header
  .popover-header,
  .popover-content,
  .popover-footer, {
    transition: opacity .15s ease-in, transform .3s ease-in-out;
  }
}

// popover-views must be fixed width & height
.popover-view {
  box-shadow: 0 1px 1px $gray-lighter;
  display: flex;
  flex-direction: column;
  float: left;
  height: 100%;
  max-height: 100%;
  position: absolute;
  transition: transform .3s ease-in-out;
  width: 100%;

  &.view-2 {
    transform: translate3d(-100%,0,0);
  }

  &.view-3 {
    transform: translate3d(-200%,0,0);
  }

  + .popover-view {
    left: 100%;

    + .popover-view {
      left: 200%;
    }
  }

  .popover-header {
    flex: 0 0 auto;
  }

  .popover-content {
    flex: 1 1 auto;
    overflow-y: auto;
  }

  .popover-footer {
    flex: 0 0 auto;
  }
}

